<resources>

    <!--    GENERAL     -->
    <string name="app_name">KOT</string>
    <string name="nav_open">Abierto</string>
    <string name="nav_close">Cerrado</string>
    <string name="nav_add_list">Agregar listas</string>
    <string name="nav_add_task">Agregar tareas</string>
    <string name="nav_all_list">Mis listas</string>
    <string name="nav_all_task">Mis tareas</string>
    <string name="nav_urgent">Tareas urgentes</string>
    <string name="nav_chart">Mis resumenes</string>
    <string name="nav_logout">Desconectar</string>
    <string name="or">Naranja</string>
    <string name="gr">Gris</string>
    <string name="tl">Verde</string>
    <string name="pr">Morado</string>
    <string name="theme">Tema</string>
    <string name="theme_text">Elige un tema:</string>
    <string name="not">Activar notificaciones:</string>
    <string name="not_text">KOT te avisará cuando tengas tareas urgentes</string>

    <!--    LOGUIN    -->
    <string name="mail">Email</string>
    <string name="pass">Contraseña</string>
    <string name="repeatPass">Repite tu contraseña</string>
    <string name="name">Nombre</string>
    <string name="login">Entrar</string>
    <string name="sign">Registrarse</string>
    <string name="acept">Aceptar</string>
    <string name="cancel">Cancelar</string>
    <string name="log_text">¿Aún no tienes una cuenta? ¡Consíguela ahora!</string>
    <string name="loading">Cargando...</string>
    <string name="wrongUser">Usuario o contraseña incorrectos.</string>
    <string name="error">Ha ocurrido un problema con la conexión, vuelva a intentarlo en unos segundos.</string>
    <string name="emailExist">Ya existe un usuario con ese email.</string>
    <string name="wrongPass">Las contrsaeñas no coinciden.</string>
    <string name="signin">Usuario registrado correctamente. ¡Bienvenido a Keep on Task!</string>

    <!--     LISTAS       -->
    <string name="add_list_text">Crea todas las listas que quieras, después podrás agregar las tareas que necesites a cada lista.</string>
    <string name="add_list_title">Crea tu nueva lista</string>
    <string name="add_list">Crear listas</string>
    <string name="list_title">Mis listas</string>
    <string name="list_date">Lista creada el</string>
    <string name="update_title">Modificar lista</string>
    <string name="update_text">Introduce el nuevo nombre de tu lista</string>
    <string name="title">Nuevo título</string>
    <string name="name_list">Ya tiene una lista con ese nombre.</string>
    <string name="created_list">Lista creada correctamente.</string>
    <string name="del_list">Eliminar lista</string>
    <string name="del_list_text">¡Atención! Al eliminar esta lista, eliminarás todas las tareas asociadas a ella. ¿Estás seguro de querer eliminarla?</string>

    <!--     TAREAS       -->
    <string name="add_task">Crear tareas</string>
    <string name="created">Creada: </string>
    <string name="task_start_adapter">Fecha de inicio:</string>
    <string name="task_end_adapter">Fecha limite:</string>
    <string name="all_task_title">Mis tareas</string>
    <string name="finish">Tarea finalizada.</string>
    <string name="no_finish">Tarea sin finalizar.</string>
    <string name="choose_list">Elija una lista:</string>
    <string name="task_title">Título: </string>
    <string name="task_hint">Nombre de la tarea</string>
    <string name="task_details">Detalles: </string>
    <string name="task_date">Hasta: </string>
    <string name="task_details_hint">Detalles de la tarea </string>
    <string name="task_urgent">Tarea urgente</string>
    <string name="task_no_urgent">Tarea no urgente</string>
    <string name="task_urgent_title">Mis tareas urgentes</string>
    <string name="task_urgent_end">Finaliza:</string>
    <string name="task_info">Detalles de la tarea:</string>
    <string name="del_task">Eliminar tarea</string>
    <string name="del_task_text">¿Estás seguro de querer eliminar esta tarea?</string>
    <string name="no_content">No ha añadido ningún detalle a la tarea</string>
    <string name="edit_task">Editar</string>
    <string name="update_task">Modificar tarea</string>
    <string name="add_task_text">Tarea agregada correctamente</string>
    <string name="update_task_text">¿Seguro que quieres modificar esta tarea?</string>
    <string name="finish_task">Finalizar tarea</string>
    <string name="finish_task_text">¿Seguro que quieres finalizar esta tarea? Una vez finalizada no podrás cambiar su estado.</string>
    <string name="choose_task_date">Elija una fecha de finalización para la tarea.</string>
    <string name="choose_task_title">Debe introducir un titulo para la tarea</string>
    <string name="content_update">Modificado correctamente.</string>


    <!--    RESUMENES       -->
    <string name="chart_title">Mi resumen semanal</string>
    <string name="summaries">Resúmenes</string>
    <string name="mon">L</string>
    <string name="tue">M</string>
    <string name="wed">X</string>
    <string name="thur">J</string>
    <string name="fri">V</string>
    <string name="sat">S</string>
    <string name="sun">D</string>
    <string name="val_urgent">Urgentes</string>
    <string name="val_no_urgent">No urgentes</string>
    <string name="today">Diario</string>
    <string name="week">Semanal</string>
    <string name="month">Mensual</string>

    <!--     CAMPOS VACIOS    -->
    <string name="emptyFields">Debe rellenar todos los campos.</string>
    <string name="empty_text">Debes escribir un título.</string>
    <string name="empty_list">Aún no tienes ninguna tarea en esta lista</string>
    <string name="empty_add_list">Aún no tienes ninguna lista, crea alguna lista para poder agregar tareas.</string>
    <string name="empty_main">Aún no tienes ninguna lista, crea algunas listas y tareas para verlas en esta pantalla.</string>
    <string name="empty_urgent">No tienes ninguna tarea urgente sin finalizar.</string>
    <string name="empty_chart">No tienes ninguna tarea pendiente durante esta semana.</string>
    <string name="empty_month">No tienes ninguna tarea pendiente durante este mes.</string>
    <string name="noTask">No tienes ninguna tarea para hoy</string>


    <string name="title_activity_main_task" translatable="false">MainTaskActivity</string>

</resources>
